Add ATR pipeline

--- a/dowaward-giordano/pipeline_testing.ipynb
+++ b/dowaward-giordano/pipeline_testing.ipynb
@@ -66,46 +66,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "85dee196",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-24T14:56:51.293332Z",
-     "start_time": "2024-03-24T14:56:51.217948Z"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "30ce26a2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-24T14:56:31.805036Z",
-     "start_time": "2024-03-24T14:56:31.781374Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "490b357f3b6e16b0"
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "c24d9662",
    "metadata": {
@@ -127,8 +87,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.set_option('display.max_rows', 500)\n",
-    "df.pivot(index='price_date', columns='ticker', values=['correlation', 'adjusted_daily_returns'])"
+    "pd.set_option('display.max_rows', 500)"
    ]
   },
   {
